--- a/src/app/home/diet/components/calorie-counter/calorie-counter.component.html
+++ b/src/app/home/diet/components/calorie-counter/calorie-counter.component.html
@@ -1,6 +1,6 @@
 <div class="container text-center mt-5">
   <h2>Meal to track</h2>
-  <div class="mt-3 mb-3">
+  <div class="mb-3">
     <div class="card" style="width: 18rem; display: inline-block; margin: 30px">
       <img
         src="https://www.visittnt.com/blog/wp-content/uploads/2017/09/maxresdefault-1.jpg"
