--- a/src/app/home/components/footer/footer.component.css
+++ b/src/app/home/components/footer/footer.component.css
@@ -1,7 +1,7 @@
 .footer {
   padding: 7px;
-  position:relative; 
-  background-color: darkgrey;
+  position: relative;
+  background-color: #0e400e;
   bottom: 0;
   right: 0;
   width: 100%;
@@ -15,4 +15,6 @@
   font-weight: bold;
   font-size: larger;
 }
-
+span {
+  color: white;
+}
