added should-be-filled guard

--- a/src/app/home/admin/components/food/food.component.html
+++ b/src/app/home/admin/components/food/food.component.html
@@ -1,4 +1,4 @@
-<div class="content">
+<div class="content" [ngStyle]="myStyle">
   <div class="container">
     <div class="row" style="background-color:#0a0a0ab3">
       <div class="col align-self-start">
