--- a/src/app/home/admin/components/user-list/user-list.component.html
+++ b/src/app/home/admin/components/user-list/user-list.component.html
@@ -1,4 +1,4 @@
-<div class="content">
+<div class="content" [ngStyle]="myStyle">
   <div class="container">
     <div class="row mt-3" style="background-color: #0a0a0ab3">
       <div class="col align-self-center"><h5>User List</h5></div>
