--- a/src/app/home/diet/components/add-food/add-food.component.html
+++ b/src/app/home/diet/components/add-food/add-food.component.html
@@ -65,7 +65,7 @@
               {{ entry.itemName }}
             </p>
           </div>
-          <div class="col-2">
+          <div class="col-2" style="padding-left: 24px">
             <p #foodQuantity>{{ entry.quantity }}</p>
           </div>
           <div class="col-4">
