--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -19,7 +19,12 @@
             filter: saturate(120%);
           "
         >
-          <div class="card-header text-center mb-3">NUTRIPLAN</div>
+          <div class="card-header text-center mb-3"><img
+            src="https://cdn4.iconfinder.com/data/icons/fruits-79/48/08-orange-256.png"
+            height="25px"
+            width="25px"
+            style="margin-right: 5px;filter:saturate(120%);"
+          />NUTRIPLAN</div>
           <h6>Login with your username and password</h6>
           <form [formGroup]="userlogin" (ngSubmit)="onLogin()">
             <div class="row mt-3">
