--- a/src/app/home/admin/components/food/food.component.html
+++ b/src/app/home/admin/components/food/food.component.html
@@ -1,6 +1,6 @@
-<div class="content" [ngStyle]="myStyle">
+<div class="content">
   <div class="container">
-    <div class="row" style="background-color:#0a0a0ab3">
+    <div class="row" style="background-color: #0a0a0ab3">
       <div class="col align-self-start">
         <button
           type="button"
@@ -29,7 +29,7 @@
           placeholder="search food"
           (input)="onSearch(searchFood.value)"
           placeholder="search food"
-          style="float: right;margin-bottom: 5px;"
+          style="float: right; margin-bottom: 5px"
         />
       </div>
     </div>
@@ -38,16 +38,28 @@
     >
       <thead>
         <tr>
-          <th>Food</th>
-          <th>Quantity</th>
+          <th style="width: 250px">Food</th>
+          <th style="width: 350px">Quantity</th>
+          <th style="width: 280px">Meal Type</th>
           <th>Calorie</th>
           <th></th>
         </tr>
       </thead>
       <tbody>
-        <tr *ngFor="let item of food">
+        <tr
+          *ngFor="
+            let item of food
+              | paginate
+                : {
+                    itemsPerPage: tableSize,
+                    currentPage: page,
+                    totalItems: count
+                  }
+          "
+        >
           <td>{{ item.itemName }}</td>
           <td>{{ item.quantity }} {{ item.unit }}</td>
+          <td>{{ item.type }}</td>
           <td>{{ item.calorie }}</td>
           <td>
             <button
@@ -91,5 +103,19 @@
         </tr>
       </tbody>
     </table>
+  </div>
+
+  <div class="d-flex justify-content-center">
+    <pagination-controls
+      style="text-decoration: none"
+      class="mystyle"
+      [maxSize]="5"
+      [autoHide]="true"
+      [responsive]="true"
+      previousLabel="Prev"
+      nextLabel="Next"
+      (pageChange)="onTableDataChange($event)"
+    >
+    </pagination-controls>
   </div>
 </div>
