--- a/src/app/home/components/nav-bar/nav-bar.component.html
+++ b/src/app/home/components/nav-bar/nav-bar.component.html
@@ -1,6 +1,13 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-expand-lg navbar-dark dark">
   <div class="container-fluid">
-    <a class="navbar-brand">NutriPlan</a>
+    <a class="navbar-brand"
+      ><img
+        src="https://cdn3.iconfinder.com/data/icons/medicalvista/512x512/heart_beat.png"
+        height="25px"
+        width="25px"
+        style="margin-right: 5px;filter:saturate(120%);"
+      />NutriPlan</a
+    >
     <div class="navbarRight">
       <ul class="navbar-nav">
         <li class="nav-item">
